<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">Antelope Media Player</string>
    <string name="repeat_toggle">Repeat</string>
    <string name="shuffle_toggle">Shuffle</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="GPL">Antelope Media Player - Media player for Android<br />
Copyright (C) 2011  William C. Witt<br />
<br />
This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.

This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with this program.  If not, see http://www.gnu.org/licenses.</string>
    <string name="ok_button">Ok</string>
    <string name="about_menu">About</string>
</resources>
